Fix select misalignement & date input size on firefox

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -158,7 +158,7 @@ body {
 
 .form-input {
     border-radius: 3px;
-    padding: 5px 5px;
+    padding: 4px 5px;
     height: 30px;
     border: 1px solid;
 }
@@ -442,9 +442,8 @@ select.form-input {
 	display: none;
 }
 .refine-date {
-    width: 98px!important;	
+    width: 100px!important;	
 }
-
 .categories a {
     display: inline-block;
     width: 115px;
